# llm-wiki-synapse

./: .dockerignore  .env.example  .gitignore  404.html  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_STATUS.md  LICENSE  Makefile  README.md  SECURITY.md  TRACEABILITY.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml  index.html  mkdocs.yml  sitemap.xml
.claude/: launch.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
DEPLOY/: index.html
USER/: index.html
adr/: index.html
api/: index.html  openapi.json
architecture/: component.mmd  container.mmd  context.mmd  index.html
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-lock.txt  requirements-prod-lock.txt
backend/alembic/: alembic.ini  env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_v0_2_tables.py  0003_v0_3_graph.py  0004_edges_kind_column.py  0005_pages_pinned.py  0006_ingest_runs_view_fields.py  0007_chat_tables.py  0008_import_schedules.py  0009_deep_research_tables.py  0010_review_items.py  0011_vault_state_remote_mcp_enabled.py  0012_vault_state_mcp_access_token_and_allow.py  0013_review_items_proposal_model.py  0014_lint_tables.py  0015_vault_state_clip_config.py  0016_vault_state_web_search_config.py  0017_vault_state_cli_oauth_token.py  0018_pages_tags.py  0019_review_items_contextual_depth.py  0020_pages_community.py  0021_ingest_runs_queue_fields.py  0022_image_captions.py  0023_app_config.py  0024_lint_suggested_target.py  0025_messages_images.py  0026_provider_config_api_key_and_reasoning.py  0027_vault_state_cli_oauth_token_encrypted.py  0028_import_schedule_wider_types.py  0029_web_search_api_keys_encrypted.py  0030_vault_state_remote_mcp_write_enabled.py  0031_generation_lifecycle_parity.py  0032_vault_state_output_language.py  0033_links_dangling_partial_index.py  0034_ingest_runs_vault_started_index.py  0035_ingest_runs_diagnostics.py  0036_api_tokens.py  0036_page_summary_gloss.py  0037_page_summary_gloss.py  0038_mcp_oauth.py
backend/app/: __init__.py  auth.py  base_url_validator.py  cli_auth.py  client_ip.py  config.py  config_overrides.py  costs.py  db.py  embeddings.py  errors.py  export.py  health.py  import_scheduler.py  main.py  marker_converter.py  models.py  ops_scheduler.py  project_registry.py  projects.py  provider_config_service.py  provider_vendors.py  qdrant_client.py  rate_limit.py  runtime_state.py  scenarios_data.py  scheduler_state.py  secrets_crypto.py  security_headers.py  security_net.py  sources.py  stats.py  upload.py  vault.py  watcher.py
backend/app/chat/: __init__.py  autotitle.py  context.py  stream.py  think.py  web_context.py
backend/app/graph/: __init__.py  cache.py  engine.py
backend/app/ingest/: __init__.py  block_loop.py  block_writer.py  blocks.py  context.py  domain_tagger.py  extract.py  language.py  long_source.py  loop.py  orchestrator.py  page_merge.py  pipeline.py  prompts.py  queue_manager.py  sanitize.py  schemas.py  transcription.py  validate.py  vision.py  writer.py
backend/app/ingest/provider/: __init__.py  _common.py  api.py  base.py  cli.py  config.py  ollama.py
backend/app/mcp/: __init__.py  oauth.py  server.py
backend/app/ops/: __init__.py  _llm.py  backfill_domains.py  backfill_related.py  backup.py  cascade_delete.py  dedup_entities.py  deep_research.py  enrich_wikilinks.py  lint.py  migrate_lint_query_stubs.py  overview.py  reclassify_types.py  reconcile_folders.py  review.py  schema_review.py  searxng.py  synthesize.py  system_update.py
backend/app/ops/lint/: __init__.py  _shared.py  detectors.py  fixes.py  persistence.py  semantic.py
backend/app/ops/review/: __init__.py  create.py  prompts.py  propose.py  queue.py  suggestions.py
backend/app/ops/web_search/: __init__.py  base.py  brave.py  firecrawl.py  keys.py  ollama_web.py  searxng.py  serpapi.py  tavily.py
backend/app/rag/: __init__.py  retrieval.py
backend/app/routers/: __init__.py  chat.py  clip.py  config.py  events.py  graph.py  ingest.py  lint.py  ops.py  ops_overview.py  pages.py  research.py  review.py  scenarios.py  search.py  status.py  vault_meta.py
backend/app/routers/config/: __init__.py  api_tokens.py  app_config.py  cli_auth.py  clip.py  embedding.py  import_schedule.py  mcp.py  provider.py  provider_test.py  web_search.py
backend/app/schemas/: __init__.py  config.py
backend/app/wiki/: __init__.py  index.py  links.py  schema.py  summary.py
backend/scripts/: backfill_page_summary.py  backfill_qdrant_vault_id.py  check_obsidian.py  generate_er.py  generate_openapi.py  seed_demo_vault.py  seed_e2e_extras.py  seed_graph_fixture.py  smoke_providers.py
backend/tests/: __init__.py  _db_fixtures.py  conftest.py  test_adr0067_generation_parity.py  test_api.py  test_api_tokens_pf_auth1.py  test_b2_chat_composer.py  test_b5_mcp_and_review.py  test_backfill_domains.py  test_backfill_endpoint.py  test_backfill_related.py  test_backup.py  test_base_url_validator.py  test_block_loop.py  test_block_writer.py  test_boot_vault_meta_index.py  test_bounded_loop.py  test_bugfixes_a1_a2_a3.py  test_bugfixes_b3_b4_b5_b7_b8_b9_b10.py  test_cancel_ingest.py  test_cascade_delete.py  test_cascade_preserve_shared.py  test_chat.py  test_chat_endpoint.py  test_cli_auth.py  test_cli_auth_config.py  test_cli_chat.py  test_cli_cost.py  test_cli_resilience.py  test_clip.py  test_clip_config.py  test_code_quality.py  test_config_overrides.py  test_convert_marker.py  test_cors_config.py  test_cross_ingest_connectivity.py  test_dedup_entities.py  test_deep_research.py  test_deep_research_fetch_binary.py  test_docs.py  (+132 more)
backend/tests/fixtures/: sample-source.md
backend/tests/fixtures/parity_corpus/: 01-transformer-architecture.md  02-gpt-and-bert.md  03-scaling-and-context-windows.md
docs/: DEPLOY.md  USER.md  index.md
er/: schema.mmd
extension/: README.md  manifest.json  (+4 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate_icons.sh  icon.icns
src-tauri/src/: lib.rs  main.rs
(+1081 files in other folders)
