[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synapse-backend"
version = "1.7.2"
description = "Synapse — The self-hosted LLM wiki that turns your sources into connected knowledge."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "qdrant-client>=1.12.0",  # >=1.12 guarantees query_points() (search() removed in 1.18) — ADR-0022 C2
    "watchdog>=4.0.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    # W1 / F17 (§12 amendment): Fernet at-rest encryption for UI-supplied provider API keys.
    # SOLE home: app/secrets_crypto.py. Master key from SYNAPSE_SECRET_KEY env (never in DB).
    "cryptography>=42",
    "python-frontmatter>=1.1.0",
    "fastmcp>=2.0.0",
    # F17 CLI backend (R3). Lazy-imported in ingest/provider/cli.py so infra-free unit tests do
    # not need it installed, but declared here so a real deploy provisions it. 0.2 is the current
    # API line (ClaudeSDKClient / ClaudeAgentOptions / receive_response).
    "claude-agent-sdk>=0.2,<0.3",
    "igraph>=0.11",
    "fa2_modified>=0.4",
    # ── F12 multi-format ingest (ADR-0025 §4.6) ──────────────────────────────
    # SOLE home: ingest/extract.py (static guard, AC-F12-7). unstructured NOT added (§4.5).
    "pypdf>=4.2,<6",
    "python-docx>=1.1,<2",
    "python-pptx>=0.6.23,<1.1",
    "openpyxl>=3.1,<4",
    # P3-c additions (v1.5 LLM Wiki parity) [F12] — pure-python, no system deps:
    "markdownify>=0.11,<1",   # .html → GFM markdown (strip scripts/styles)
    "striprtf>=0.0.26,<1",    # .rtf  → plain text (codepage-aware)
    "odfpy>=1.4,<2",          # .odt/.ods/.odp → text/table/slide extraction
    # .csv uses stdlib csv — no new dep.
    # .mdx uses stdlib re  — no new dep.
    # .doc NOT implemented  — see ingest/extract.py module docstring for ADR note.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "aiosqlite>=0.20.0",
    "ruff==0.15.20",
    "black==26.5.1",
    "mypy==2.1.0",
    "types-pyyaml>=6.0.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (partial)
    "S",   # flake8-bandit (security)
    "TCH", # flake8-type-checking
]
ignore = [
    "S101",    # assert in tests is fine
    "ANN401",  # Any return type allowed in FastAPI route
    "ANN201",  # lifespan generator return type
    "TC003",   # stdlib TYPE_CHECKING moves are optional
    "TC002",   # third-party TYPE_CHECKING moves are optional
    "TC001",   # first-party TYPE_CHECKING moves are optional
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S", "E501", "E402"]
# Cross-module pytest fixture reuse: importing a fixture and using it as a test
# parameter is the documented pytest pattern but trips F811 (param shadows import).
"tests/test_review_ai_adr0034.py" = ["ANN", "S", "F811"]
"tests/test_r9_purpose_suggestions.py" = ["ANN", "S", "F811"]
"tests/test_r9_schema_suggestions.py" = ["ANN", "S", "F811"]
"tests/test_page_content_api.py" = ["ANN", "S", "F811"]
"tests/test_put_content_no_llm.py" = ["ANN", "S", "F811"]
"tests/test_pages_by_slug.py" = ["ANN", "S", "F811"]
"tests/test_write_wiki_page_upsert.py" = ["ANN", "S", "F811"]
"tests/test_page_content_generated.py" = ["ANN", "S", "F811"]
"tests/test_page_tags.py" = ["ANN", "S", "F811"]
"tests/test_overview_regen.py" = ["ANN", "S", "F811"]
"tests/test_overview_not_touched_by_ingest.py" = ["ANN", "S", "F811"]
# Cross-module pytest fixture reuse: imported fixture name collides with the
# function-parameter fixture name at call sites — the documented pytest pattern.
"tests/test_related_pages.py" = ["ANN", "S", "F811"]
"tests/test_strip_leading_frontmatter.py" = ["ANN", "S", "F811"]
"tests/test_adr0067_generation_parity.py" = ["ANN", "S", "F811"]
"tests/test_list_pages_domain.py" = ["ANN", "S", "F811"]
"scripts/*" = ["ANN", "S", "E501"]  # scripts are not production code — relax annotations and line length

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are idiomatic in argument defaults (B008).
# Treat them as immutable calls so `param = File(...)` / `Depends(...)` are allowed.
extend-immutable-calls = [
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Body",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Depends",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
# Target 3.13 to match the runtime venv (CLAUDE.md "3.11+"); 3.13 lets mypy parse
# numpy 2.5's PEP 695 `type` statements in its bundled stubs, so `make typecheck`
# passes on a clean install regardless of the interpreter version.
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

# app.mcp.server decorates tools with claude_agent_sdk's untyped @tool decorator.
# Locally the SDK is installed (decorator visibly untyped → needs an ignore); on CI
# it is absent (ignore_missing_imports makes it Any → the ignore would be "unused").
# A per-module disable is the only environment-independent form.
[[tool.mypy.overrides]]
module = "app.mcp.server"
disable_error_code = ["untyped-decorator", "unused-ignore"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "live: marks tests as requiring live infrastructure (Ollama, Anthropic API, claude-agent-sdk)",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
